--- a/notebooks/YOLO_Transfer Learning.ipynb
+++ b/notebooks/YOLO_Transfer Learning.ipynb
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "affe0247",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current working directory: c:\\Users\\julia\\Trabajo\\IFAI Solutions\\Repositorios\\YOLO_Object-Detection\n"
+     ]
+    }
+   ],
    "source": [
     "# Libraries\n",
     "import os\n",
@@ -44,14 +52,20 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "# Set main directory\n",
-    "main_dir = \"C:/Users/julia/Trabajo/IFAI Solutions/Repositorios/YOLO_Object-Detection\"\n",
-    "os.chdir(main_dir)"
+    "# Get the current working directory\n",
+    "current_dir = os.getcwd()\n",
+    "\n",
+    "# Check if we are in the 'notebooks' folder and move up to the project root\n",
+    "if os.path.basename(current_dir) == 'notebooks':\n",
+    "    os.chdir('..')\n",
+    "    print(f\"Changed working directory to project root: {os.getcwd()}\")\n",
+    "else:\n",
+    "    print(f\"Current working directory: {os.getcwd()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "d055c335",
    "metadata": {},
    "outputs": [
@@ -65,20 +79,20 @@
    ],
    "source": [
     "# Model folder\n",
-    "folder_path = \"model\"\n",
+    "model_path = \"model\"\n",
     "\n",
     "# Create folder if it doesn't exist\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
-    "    print(f\"Folder '{folder_path}' created\")\n",
+    "if not os.path.exists(model_path):\n",
+    "    os.makedirs(model_path)\n",
+    "    print(f\"Folder '{model_path}' created\")\n",
     "\n",
     "else:\n",
-    "    print(f\"Folder '{folder_path}' already exists\")"
+    "    print(f\"Folder '{model_path}' already exists\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8638c019",
    "metadata": {},
    "outputs": [
@@ -112,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b8c02129",
    "metadata": {},
    "outputs": [
@@ -120,7 +134,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[KDownloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolov8n.pt to 'model\\yolov8n.pt': 100% ━━━━━━━━━━━━ 6.2MB 7.4MB/s 0.8s.8s<0.1s.5s\n",
       "Model loaded successfully:\n",
       "\n",
       "YOLOv8n summary: 129 layers, 3,157,200 parameters, 0 gradients, 8.9 GFLOPs\n"
@@ -132,14 +145,14 @@
        "(129, 3157200, 0, 8.8575488)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Download pre-trained model\n",
-    "model = YOLO(os.path.join(folder_path, \"yolov8n.pt\")) # Nano version \"m\" (also you can use \"s\" and \"m\")\n",
+    "model = YOLO(os.path.join(model_path, \"yolov8n.pt\")) # Nano version \"m\" (also you can use \"s\" and \"m\")\n",
     "\n",
     "print(\"Model loaded successfully:\\n\")\n",
     "\n",
